[project]
name = "pyromod"
version = "3.1.6"
description = "A monkeypatcher add-on for Pyrogram that does conversation handling"
authors = [
    { name = "Pauxis", email = "pauxiscezar@gmail.com" }
]
dependencies = [
    "grafian"
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pdoc>=14.1.0",
]

[tool.hatch.metadata]
allow-direct-references = true
