[project]
name = "pyromod"
version = "3.1.6"
description = "A monkeypatcher add-on for Pyrogram that does conversation handling"
authors = [
    { name = "Pauxis", email = "pauxiscezar@gmail.com" }
]
dependencies = [
    "grafian==1.2.28",
    "uvloop==0.21.0",
    "meval",
    "aiosqlite",
    "pytz",
    "aiofiles",
    "aiorun",
    "httpx[http2]==0.27.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pdoc>=14.1.0",
]

[tool.hatch.metadata]
allow-direct-references = true
